--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1",
-    "socket.io": "^1.5.0",
+    "socket.io": "^1.5.0"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
